@@ -1,3 +1,4 @@
+* #1825: Fix tab label padding. (marco)
 * #1823: Margin at the toolbar tabs bottom. (marco)
 * #1872, #1934: Hide palettes when closing activities or switching views. (tomeu)
 
